--- a/src/Makefile
+++ b/src/Makefile
@@ -3,6 +3,17 @@ SRC:=.
 
 ENTRYPOINT:=0x10000
 
+CFLAGS:= -m32
+CFLAGS+= -fno-builtin # 不需要 gcc 内置函数
+CFLAGS+= -nostdinc # 不需要标准头文件
+CFLAGS+= -fno-pic # 不需要位置无关代码 postion independt code
+CFLAGS+= -fno-pie # 不需要位置无关代的可执行文件postion independt executable
+CFLAGS+= -nostdlib # 不需要标准库
+CFLAGS+= -fno-stack-protector # 不需要栈保护
+CFLAGS+= $(strip ${CFLAGS})
+
+DEBUG:= -g
+INCLUDE:=-I$(SRC)/include
 
 $(BUILD)/boot/%.bin: $(SRC)/boot/%.asm
 	$(shell mkdir -p $(dir $@))
@@ -13,7 +24,14 @@ $(BUILD)/kernel/%.o: $(SRC)/kernel/%.asm
 	$(shell mkdir -p $(dir $@))
 	nasm -f elf32 $< -o $@
 
-$(BUILD)/kernel.bin: $(BUILD)/kernel/start.o
+$(BUILD)/kernel/%.o: $(SRC)/kernel/%.c
+	$(shell mkdir -p $(dir $@))
+	gcc $(CFLAGS) $(DEBUG) $(INCLUDE) -c $< -o $@
+
+
+$(BUILD)/kernel.bin: $(BUILD)/kernel/start.o \
+	$(BUILD)/kernel/main.o
+
 	$(shell mkdir -p $(dir $@))
 	ld -m elf_i386 -static $^ -o $@ -Ttext $(ENTRYPOINT)
 
@@ -24,16 +42,18 @@ $(BUILD)/system.map: $(BUILD)/kernel.bin
 	nm $< | sort > $@
 
 $(BUILD)/master.img: $(BUILD)/boot/boot.bin \
- 	$(BUILD)/boot/loader.bin
+ 	$(BUILD)/boot/loader.bin \
+	$(BUILD)/system.bin \
+	$(BUILD)/system.map \
+
 
 	yes | bximage -q -hd=16 -func=create -sectsize=512 -imgmode=flat $@
 	dd if=$(BUILD)/boot/boot.bin of=$@ bs=512 count=1 conv=notrunc
 	dd if=$(BUILD)/boot/loader.bin of=$@ bs=512 count=4 seek=2 conv=notrunc
+	dd if=$(BUILD)/system.bin of=$@ bs=512 count=200 seek=10 conv=notrunc  
 
 
 test:$(BUILD)/master.img
-
-
 
 .PHONY:clean
 clean:
