--- a/src/Makefile
+++ b/src/Makefile
@@ -35,6 +35,8 @@ $(BUILD)/kernel.bin:  \
 	$(BUILD)/kernel/main.o \
 	$(BUILD)/kernel/console.o \
 	$(BUILD)/kernel/io.o \
+	$(BUILD)/kernel/printk.o \
+	$(BUILD)/kernel/vsprintf.o \
 	$(BUILD)/lib/string.o \
 
 	$(shell mkdir -p $(dir $@))
