--- a/src/Makefile
+++ b/src/Makefile
@@ -36,7 +36,7 @@ $(BUILD)/kernel.bin:  \
 	$(BUILD)/kernel/console.o \
 	$(BUILD)/kernel/io.o \
 	$(BUILD)/kernel/printk.o \
-	$(BUILD)/kernel/vsprintf.o \
+	$(BUILD)/lib/vsprintf.o \
 	$(BUILD)/lib/string.o \
 
 	$(shell mkdir -p $(dir $@))
