--- a/src/Makefile
+++ b/src/Makefile
@@ -38,7 +38,8 @@ $(BUILD)/kernel.bin:  \
 	$(BUILD)/kernel/printk.o \
 	$(BUILD)/lib/vsprintf.o \
 	$(BUILD)/lib/string.o \
-	$(BUILD)/kernel/assert.o
+	$(BUILD)/kernel/assert.o\
+	$(BUILD)/kernel/debug.o
 
 	$(shell mkdir -p $(dir $@))
 	ld -m elf_i386 -static $^ -o $@ -Ttext $(ENTRYPOINT)
