--- a/src/Makefile
+++ b/src/Makefile
@@ -39,7 +39,9 @@ $(BUILD)/kernel.bin:  \
 	$(BUILD)/lib/vsprintf.o \
 	$(BUILD)/lib/string.o \
 	$(BUILD)/kernel/assert.o\
-	$(BUILD)/kernel/debug.o
+	$(BUILD)/kernel/debug.o\
+	$(BUILD)/kernel/global.o\
+	
 
 	$(shell mkdir -p $(dir $@))
 	ld -m elf_i386 -static $^ -o $@ -Ttext $(ENTRYPOINT)
