--- a/src/Makefile
+++ b/src/Makefile
@@ -41,6 +41,10 @@ $(BUILD)/kernel.bin:  \
 	$(BUILD)/kernel/assert.o\
 	$(BUILD)/kernel/debug.o\
 	$(BUILD)/kernel/global.o\
+	$(BUILD)/kernel/task.o \
+	$(BUILD)/kernel/schedule.o\
+
+	
 	
 
 	$(shell mkdir -p $(dir $@))
