--- a/src/Makefile
+++ b/src/Makefile
@@ -43,6 +43,8 @@ $(BUILD)/kernel.bin:  \
 	$(BUILD)/kernel/global.o\
 	$(BUILD)/kernel/task.o \
 	$(BUILD)/kernel/schedule.o\
+	$(BUILD)/kernel/interrupt.o\
+	$(BUILD)/kernel/handler.o\
 
 	
 	
