--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,7 @@
     ],
     "version": "2.0.0",
     "files.associations": {
-        "functional": "c"
+        "functional": "c",
+        "types.h": "c"
     }
 }
