--- a/src/Makefile
+++ b/src/Makefile
@@ -46,6 +46,7 @@ $(BUILD)/kernel.bin:  \
 	$(BUILD)/kernel/interrupt.o\
 	$(BUILD)/kernel/handler.o\
 	$(BUILD)/lib/stdlib.o\
+	$(BUILD)/kernel/clock.o\
 
 	
 	
